@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_failure_output" errors="1" failures="25" tests="26" time="0.411" hostname="unknown" timestamp="2015-04-13T18:03:49">
+<testsuite name="test_failure_output" errors="1" failures="28" tests="29" time="0.46" hostname="unknown" timestamp="2015-04-14T11:37:21">
   <properties/>
   <testcase classname="test_failure_output" name="test_empty">
     <failure><![CDATA[(no message available)
@@ -42,26 +42,47 @@ In test_failure_output.m at line 51]]></failure>
   <testcase classname="test_failure_output" name="test_equals_string">
     <failure><![CDATA[Data not equal:
   Expected : 'foo'
-  Actual   : 'fOo'
+  Actual   : 'fOO'
+  Changes  :   ^^
 In test_failure_output.m at line 56]]></failure>
+  </testcase>
+  <testcase classname="test_failure_output" name="test_equals_scalar_cellstring">
+    <failure><![CDATA[Data not equal:
+  Expected : 'foo'
+  Actual   : 'fOO'
+  Changes  :   ^^
+In test_failure_output.m at line 61]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_cell">
     <failure><![CDATA[Data not equal:
   Expected : {3, 'foo'}
   Actual   : {3, 'fOo'}
-In test_failure_output.m at line 63]]></failure>
+In test_failure_output.m at line 68]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_struct">
     <failure><![CDATA[Data not equal at position .foo:
   Expected : {'hi', 'ho'}
   Actual   : {'ho', 'hi'}
-In test_failure_output.m at line 71]]></failure>
+In test_failure_output.m at line 76]]></failure>
+  </testcase>
+  <testcase classname="test_failure_output" name="test_equals_string_struct">
+    <failure><![CDATA[Data not equal at position .foo:
+  Expected : 'you say \to-'mah-(,)to'
+  Actual   : 'you say \to-'mey-(,)to'
+  Changes  :                ^^
+In test_failure_output.m at line 86]]></failure>
+  </testcase>
+  <testcase classname="test_failure_output" name="test_equals_scalar_cellstring_struct">
+    <failure><![CDATA[Data not equal at position .foo:
+  Expected : {'you say \to-'mah-(,)to'}
+  Actual   : {'you say \to-'mey-(,)to'}
+In test_failure_output.m at line 96]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_nested_struct">
     <failure><![CDATA[Data not equal at position .tee.foo:
   Expected : {'hi', 'ho'}
   Actual   : {'ho', 'hi'}
-In test_failure_output.m at line 80]]></failure>
+In test_failure_output.m at line 105]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_nested_struct_multiple_differences">
     <failure><![CDATA[Data not equal at position .tee.bar:
@@ -70,7 +91,7 @@ In test_failure_output.m at line 80]]></failure>
 Data not equal at position .tee.foo:
   Expected : {'hi', 'ho'}
   Actual   : {'ho', 'hi'}
-In test_failure_output.m at line 90]]></failure>
+In test_failure_output.m at line 115]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_nested_struct_many_differences">
     <failure><![CDATA[Data not equal at position .bar:
@@ -83,13 +104,13 @@ Data not equal at position .tee.bar:
   Expected : [3 4]
   Actual   : [3 5]
 ... more differences detected, but not displayed.
-In test_failure_output.m at line 102]]></failure>
+In test_failure_output.m at line 127]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_structarray">
     <failure><![CDATA[Data not equal:
   Expected : [{foo:{'hi', 'ho'}; bar:3}, {foo:{'hi', 'ho'}; bar:4}]
   Actual   : [{foo:{'hi', 'ho'}; bar:3}, {foo:{'ho', 'hi'}; bar:4}]
-In test_failure_output.m at line 110]]></failure>
+In test_failure_output.m at line 135]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_object">
     <failure><![CDATA[Data not equal:
@@ -119,49 +140,49 @@ Data characteristics
       Interpolation method  linear
       Size                  [1   1  12]
       Data type             double
-In test_failure_output.m at line 120]]></failure>
+In test_failure_output.m at line 145]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_handle">
     <failure><![CDATA[Data not equal:
   Expected : 0
   Actual   : 1
-In test_failure_output.m at line 135]]></failure>
+In test_failure_output.m at line 160]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_functionhandle">
     <failure><![CDATA[Data not equal:
   Expected : @(x)x*x+x
   Actual   : @(x)x+x*x
-In test_failure_output.m at line 151]]></failure>
+In test_failure_output.m at line 176]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_javaobject">
     <failure><![CDATA[Data not equal:
   Expected : hiho
   Actual   : hiHo
-In test_failure_output.m at line 157]]></failure>
+In test_failure_output.m at line 182]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_not_equals">
     <failure><![CDATA[Expected and actual are equal.
-In test_failure_output.m at line 162]]></failure>
+In test_failure_output.m at line 187]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_error">
     <failure><![CDATA[Error expected, but none occurred.
-In test_failure_output.m at line 167]]></failure>
+In test_failure_output.m at line 192]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_typed_error">
     <failure><![CDATA[Error expected, but none occurred.
-In test_failure_output.m at line 172]]></failure>
+In test_failure_output.m at line 197]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_wrong_typed_error">
     <failure><![CDATA[Error occurred, but did not match criteria. Expected error identifier 'MATLAB:SomeError' actually was 'MATLAB:m_improper_grouping'.
-In test_failure_output.m at line 176]]></failure>
+In test_failure_output.m at line 201]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_warning">
     <failure><![CDATA[No warning MATLAB:rmpath:DirNotFound when executing function @()3.
-In test_failure_output.m at line 182]]></failure>
+In test_failure_output.m at line 207]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_implementation_fault">
     <error><![CDATA[Undefined function or variable 'unknown_function_call'.
-In test_failure_output.m at line 186
+In test_failure_output.m at line 211
 In run_test.m at line 21
 In run_test.m at line 50
 In run_suite.m at line 63
@@ -170,8 +191,8 @@ In recursive_test_run.m at line 42]]></error>
   </testcase>
   <testcase classname="test_failure_output" name="test_nested_functions">
     <failure><![CDATA[Nested function test.
-In test_failure_output.m at line 194
-In test_failure_output.m at line 190]]></failure>
+In test_failure_output.m at line 219
+In test_failure_output.m at line 215]]></failure>
   </testcase>
   <system-out/>
   <system-err/>
